<resources>
    <string name="app_name">GoCourse</string>
    <string name="my_course">My Courses</string>
    <string name="not_network">No internet connection available</string>
    <string name="refresh">Refresh</string>
    <string name="repos">Send feedback</string>
    <string name="start">Start</string>
    <string name="slogan">GoCourse provide you with covenient experience of learning.Sit still, enjoy your course !</string>
    <string name="teacher">Teacher</string>
    <string name="subtitle">Subtitle</string>
    <string name="name_course">Course Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_login">Remember login</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="student">Student</string>
    <string name="gender">Gender</string>
    <string name="name_user">User Name</string>
    <string name="Fullname">Fullname</string>
    <string name="password_repeat">Password Repeat</string>
    <string name="work">Work</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="change_image_user">Change profile picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="log_out">Log Out</string>
    <string name="price_course">Price Course</string>
    <string name="_0">0$</string>
    <string name="title">Title</string>
    <string name="rate">Rate</string>
    <string name="Description">Course Description</string>
    <string name="_5_0">5.0</string>
    <string name="pay_course">Purchase</string>
    <string name="view_all_course">View All Course</string>
    <string name="cancel_course">Cancel Course</string>
    <string name="search">Search</string>
    <string name="delete_course">Delete Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="join">Join</string>
    <string name="ask_your_teacher_for_the_class_code_and_enter_it">Ask your teacher for the class code and enter it</string>
    <string name="you_are_logged_in_with_your_account">You are logged in with your account</string>
    <string name="class_code">Class Code</string>
    <string name="how_to_log_in_with_class_code">How to log in with class code?</string>
    <string name="use_a_licensed_account">Use a licensed account</string>
    <string name="use_class_code_contains_6_7_letters_and_numbers_with_no_spaces_to_learn_characters">Use class code, contains more than 6 letters and numbers, with no spaces </string>
    <string name="create_class_join">Create Class Join</string>
    <string name="create_class">Create Class</string>
    <string name="you_need_email_authentication_for_the_next_operation">You need email authentication for the next operation</string>
    <string name="send_email_verify">Send Email Verify</string>
    <string name="if_you_cancel_this_action_the_account_will_be_removed">if you cancel this action the account will be removed</string>
    <string name="here_is_your_class_code">Here is your class code</string>
    <string name="change_the_category_of_your_course_introduction_or_make_sure_it_is_detailed">Change the category of your course introduction or make sure it is detailed</string>
    <string name="confirm_change">Confirm change</string>
    <string name="week">Week</string>
    <string name="description">Description</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="add_week">Add Week</string>
    <string name="please_set_a_description_for_the_week_and_add_more_lessons">Please set a description for the week and add more lessons</string>
    <string name="enter_content">Enter Content</string>
    <string name="id">ID</string>
    <string name="use_youtube_video_id_to_add_videos">Use Youtube Video ID to add videos</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="lesson">Lesson</string>
    <string name="Id_introduction">* ID is a string following youtube.com/ (ex: https://youtu.be/SkB-eRCzWIU then id is SkB-eRCzWIU)</string>
</resources>