<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/lo_login"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="60dp"
            android:src="@drawable/google_classroom" />

        <EditText
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/black"
            android:id="@+id/edt_email"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_edit_text"
            android:drawableTint="@android:color/darker_gray"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_baseline_email_24" />



        <EditText
            android:id="@+id/edt_password"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/black"
            android:background="@drawable/drawable_edit_text"
            android:drawableTint="@android:color/darker_gray"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_baseline_lock_24" />

        <LinearLayout
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:buttonTint="@color/main_color"
                android:id="@+id/cb_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_login"
                android:textAllCaps="false" />

            <Button
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:id="@+id/bt_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/main_color"
                android:layout_marginStart="40dp" />

        </LinearLayout>


        <Button
            android:id="@+id/bt_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:background="@drawable/drawable_button"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:backgroundTint="@color/black"
            android:text="@string/login" />

        <Button
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:id="@+id/bt_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/register_here"
            android:textAllCaps="false"
            android:textColor="@color/main_color"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>