<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.AddCourseStudentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_toolbar_vs"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="Join Class"
        app:titleTextColor="@color/black">

        <Button
            android:id="@+id/bt_join_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/drawable_button"
            android:backgroundTint="@color/gray"
            android:padding="10dp"
            android:text="@string/join"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp">

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/name_user"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_email_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/email"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/ask_your_teacher_for_the_class_code_and_enter_it"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/you_are_logged_in_with_your_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/drawable_edit_text_code_class"
        android:foregroundTint="@color/blue_google"
        android:padding="10dp"
        android:textColorHint="@color/blue_google"
        app:counterOverflowTextColor="@color/blue_google"
        app:counterTextColor="@color/blue_google"
        app:hintEnabled="true"
        app:hintTextColor="@color/blue_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:placeholderTextColor="@color/blue_google"
        app:prefixTextColor="@color/blue_google"
        app:suffixTextColor="@color/blue_google">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_class_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:foregroundTint="@color/blue_google"
            android:gravity="center_vertical"
            android:hint="@string/class_code"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/blue_google"
            android:textColorHighlight="@color/blue_google"
            android:textColorHint="@color/blue_google"
            android:textColorLink="@color/blue_google" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/how_to_log_in_with_class_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:padding="10dp"
        android:textColor="@color/black"
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/use_a_licensed_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:padding="10dp"
        android:textColor="@color/black"
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/use_class_code_contains_6_7_letters_and_numbers_with_no_spaces_to_learn_characters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>