<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/teacher"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="45dp">

                    <ImageView
                        android:id="@+id/iv_teacher"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_ratting"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/rate"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/v_ratting"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_star_24"
                    android:drawableLeft="@drawable/ic_baseline_star_24"
                    android:drawableTint="@color/color_ratting"
                    android:text="@string/_5_0" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/name_course"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/introduction"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_email_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/email"
                android:textColor="@color/black" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/bt_view_all_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/drawable_button"
                android:backgroundTint="@color/black"
                android:text="@string/view_all_course"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>